flex布局和grid布局

--- a/promise/01函数对象与实例对象.html
+++ b/promise/01函数对象与实例对象.html
@@ -13,7 +13,7 @@
       函数对象：将函数作为对象使用时，简称为函数对象
       实例对象：new函数产生的对象，简称为对象
     */
-    function Fn(){  //Fn是个函数
+    function Fn(){  //Fn是个函数，此时还看不出他是一个构造函数
     }
     // 此时Fn是个构造函数（看是否是构造函数不是看首字母大写，而是看如何使用）
     //调用/执行函数时左边有“new”就是构造函数 new执行这个函数返回的为实例对象
