--- a/promise/02.同步回调与异步回调.html
+++ b/promise/02.同步回调与异步回调.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <script>
+    /*
+      回调函数的特点：自定义的、没有亲自调用但最终执行了
+    */
     //1.同步回调函数
     const arr = [1, 2, 5, 3]
     // 遍历时的箭头函数，我没有调用
@@ -24,6 +27,11 @@
     console.log('setTimeout之后')
     // 运行结果：setTimeout之后   timeout callback()
     // 尽管定时器设置为了0
+    /*
+      如何判断一个回调函数是同步还是异步？
+        在这个回调函数后面打印输出一句话，如果这句话在回调函数之后输出了，那么就是同步回调
+        如果这句话在回调之前输出了，那么就是异步回调函数，没有立即执行，而是放入队列将来执行
+    */
   </script>
 </body>
 </html>
